syntax = "proto3";

package decomx.pantheon;

message User {
    message Contact {
        string email = 1;
        string facebook = 2;
        string wechat = 3;
        string twitter = 4;
        string phone = 5;
    }
    bytes ethereumAddress = 1;
    string name = 2;
    string introduction = 3;
    Contact contacts = 4;
}

message Task {
    enum TaskStatus {
        DRAFT = 0;
        ACCEPTED = 1;
        COMPLETED = 2;
        CLOSED = 3;
    }
    string title = 1;
    TaskStatus status = 2;
    string description = 3;

    repeated string history = 4;
    string proof = 5;
    uint32 deadline = 6;
    User owner = 7;
    User worker = 8;
    uint32 ownerDeposit = 9;
    uint32 workerDeposit = 10;
}
